new URI instead of new URL, jpg3, hentaidude.